--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -36,3 +36,13 @@
   font-size: max(1.4vw,16px);
   cursor: pointer;
 }
+.explore-menu hr{
+  margin: 10px 0px;
+  height: 2px;
+  background-color: #e2e2e2;
+  border: none;
+}
+.explore-menu-list-item .active{
+  border: 4px solid tomato;
+  padding: 2px;
+}
